@@ -1,3 +1,8 @@
+1998-04-05  Laurent Pautet  <pautet@dorine.enst.fr>
+
+	* xe_utils.adb: (Locate) When locating executable, add executable
+ 	suffix.
+
 1998-03-30  Laurent Pautet  <pautet@dorine.enst.fr>
 
 	* xe_check.adb: Two major problems have been detected. First,
